# chess-trainer

.github/: dependabot.yml
.github/workflows/: server-ci.yml
server/: Cargo.toml
server/src/: lib.rs
server/src/infrastructure/: rest.rs
server/src/puzzle/: config.rs  consts.rs  errors.rs  mod.rs  puzzle_repository.rs  rest.rs  service.rs  training_set_repository.rs  types.rs
web-ui/: .prettierrc.toml  package-lock.json  package.json
web-ui/public/: index.html
web-ui/src/: App.js  Puzzle.css  Puzzle.js
