[package]
name = "chess-trainer"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.24.2", features = ["full"] }
axum = "0.6.3"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
anyhow = "1.0.68"
csv = "1.1"
serde_with = "2.2.0"
strum = { version = "0.24.1", features = ["derive"] }
parking_lot = "0.12.1"
thiserror = "1.0.38"

[dev-dependencies]
derive_builder = "0.12.0"
mockall = "0.11.3"
